2007-11-14  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonvfs.[ch]:
        * client/gvfsdaemondbus.c:
	Make sure we somewhat cleanly handle the
	various dbus daemons going down. By somewhat
	I mean that no problem should be persistant
	even if you might get some transient error
	messages.

	Unfortunately the only way to be able to cleanly
	handle this involves globally ignoring SIGPIPE.
	What can I say, unix sucks.
	
        * common/gsysutils.c:
        (_g_socket_receive_fd):
	Handle errors if e.g. the fd is closed

2007-11-13  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
        * daemon/gvfschannel.c:
        * daemon/gvfsdaemonutils.c:
        * daemon/gvfsjobcopy.c:
        * daemon/gvfsmonitor.c:
        * daemon/gvfswritechannel.c:
	Add required includes for solaris
	Patch from Damien Carbery

2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * client/gvfsurimapper.[ch]:
	Make this class dynamic
	
        * client/Makefile.am:
        * client/gdaemonvfs.c:
        * client/smburi.c:
	Build smb uri mapper into module
	(this avoids extra .so files)

2007-11-12  Alexander Larsson  <alexl@redhat.com>

        * common/gmountspec.[ch]:
        (g_mount_spec_new_from_data):
        (g_mount_spec_set_with_len):
	Add new functions
	
        * client/Makefile.am:
        * common/Makefile.am:
	Update for moved files
	Build non-shared version of common libs.
	Ups non-shared common libs in client module.

        * common/gvfsuriutils.[ch]: Removed.
        * client/gvfsuriutils.[ch]: Added.
	Moved uriutils to gvfs (not used by daemon)
	Re-namespace to g_vfs_*
	
        * common/gvfsurimapper.[ch]: Removed.
        * client/gvfsurimapper.[ch]: Added.
	Move UriMapper to client lib
	Remove/Hide use of GMountSpec
	
        * client/gdaemonvfs.c:
        * client/smburi.c:
	Update to the new APIs
	
        * client/gvfsfusedaemon.c:
        * daemon/gvfsbackendtrash.c:
        * daemon/gvfsjobqueryfsinfo.c:
	Fix warnings